// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > -- install (terminator: sub is the literal token "--", not promoted) 1`] = `
{
  "code": 2,
  "err": "svelte-vitals ci — scaffold CI integration

Usage:
  svelte-vitals ci install [options]
  svelte-vitals ci upgrade [--dry-run]

Adds a GitHub Actions workflow (.github/workflows/svelte-vitals.yml) that calls the \`@svelte-vitals/action\`
GitHub Action on pull requests: inline annotations, a job summary, and a sticky PR
comment with the findings.

\`ci upgrade\` rewrites only the pinned \`@svelte-vitals/action\` reference in an existing
workflow to the pin bundled with this CLI, leaving the rest of the file (and any other
pins, like actions/checkout) untouched. To pick up the latest pin, run
\`npx svelte-vitals@latest ci upgrade\`.

Options:
  --force       Overwrite an existing workflow file (install only)
  --dry-run     Print the plan and exit without writing
  -h, --help    Show this help",
  "out": "",
  "wrote": false,
}
`;

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > --bogus install (unknown flag NOT stripped ahead of the sub-command split) 1`] = `
{
  "code": 2,
  "err": "svelte-vitals ci — scaffold CI integration

Usage:
  svelte-vitals ci install [options]
  svelte-vitals ci upgrade [--dry-run]

Adds a GitHub Actions workflow (.github/workflows/svelte-vitals.yml) that calls the \`@svelte-vitals/action\`
GitHub Action on pull requests: inline annotations, a job summary, and a sticky PR
comment with the findings.

\`ci upgrade\` rewrites only the pinned \`@svelte-vitals/action\` reference in an existing
workflow to the pin bundled with this CLI, leaving the rest of the file (and any other
pins, like actions/checkout) untouched. To pick up the latest pin, run
\`npx svelte-vitals@latest ci upgrade\`.

Options:
  --force       Overwrite an existing workflow file (install only)
  --dry-run     Print the plan and exit without writing
  -h, --help    Show this help",
  "out": "",
  "wrote": false,
}
`;

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > --force --help (sub is the literal token "--force", not a flag) 1`] = `
{
  "code": 2,
  "err": "svelte-vitals ci — scaffold CI integration

Usage:
  svelte-vitals ci install [options]
  svelte-vitals ci upgrade [--dry-run]

Adds a GitHub Actions workflow (.github/workflows/svelte-vitals.yml) that calls the \`@svelte-vitals/action\`
GitHub Action on pull requests: inline annotations, a job summary, and a sticky PR
comment with the findings.

\`ci upgrade\` rewrites only the pinned \`@svelte-vitals/action\` reference in an existing
workflow to the pin bundled with this CLI, leaving the rest of the file (and any other
pins, like actions/checkout) untouched. To pick up the latest pin, run
\`npx svelte-vitals@latest ci upgrade\`.

Options:
  --force       Overwrite an existing workflow file (install only)
  --dry-run     Print the plan and exit without writing
  -h, --help    Show this help",
  "out": "",
  "wrote": false,
}
`;

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > --help 1`] = `
{
  "code": 0,
  "err": "",
  "out": "svelte-vitals ci — scaffold CI integration

Usage:
  svelte-vitals ci install [options]
  svelte-vitals ci upgrade [--dry-run]

Adds a GitHub Actions workflow (.github/workflows/svelte-vitals.yml) that calls the \`@svelte-vitals/action\`
GitHub Action on pull requests: inline annotations, a job summary, and a sticky PR
comment with the findings.

\`ci upgrade\` rewrites only the pinned \`@svelte-vitals/action\` reference in an existing
workflow to the pin bundled with this CLI, leaving the rest of the file (and any other
pins, like actions/checkout) untouched. To pick up the latest pin, run
\`npx svelte-vitals@latest ci upgrade\`.

OPTIONS:
  -h, --help             Show this help
  --force                Overwrite an existing workflow file (install only)
  --dry-run              Print the plan and exit without writing",
  "wrote": false,
}
`;

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > -h 1`] = `
{
  "code": 0,
  "err": "",
  "out": "svelte-vitals ci — scaffold CI integration

Usage:
  svelte-vitals ci install [options]
  svelte-vitals ci upgrade [--dry-run]

Adds a GitHub Actions workflow (.github/workflows/svelte-vitals.yml) that calls the \`@svelte-vitals/action\`
GitHub Action on pull requests: inline annotations, a job summary, and a sticky PR
comment with the findings.

\`ci upgrade\` rewrites only the pinned \`@svelte-vitals/action\` reference in an existing
workflow to the pin bundled with this CLI, leaving the rest of the file (and any other
pins, like actions/checkout) untouched. To pick up the latest pin, run
\`npx svelte-vitals@latest ci upgrade\`.

OPTIONS:
  -h, --help             Show this help
  --force                Overwrite an existing workflow file (install only)
  --dry-run              Print the plan and exit without writing",
  "wrote": false,
}
`;

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > bogus sub 1`] = `
{
  "code": 2,
  "err": "svelte-vitals ci — scaffold CI integration

Usage:
  svelte-vitals ci install [options]
  svelte-vitals ci upgrade [--dry-run]

Adds a GitHub Actions workflow (.github/workflows/svelte-vitals.yml) that calls the \`@svelte-vitals/action\`
GitHub Action on pull requests: inline annotations, a job summary, and a sticky PR
comment with the findings.

\`ci upgrade\` rewrites only the pinned \`@svelte-vitals/action\` reference in an existing
workflow to the pin bundled with this CLI, leaving the rest of the file (and any other
pins, like actions/checkout) untouched. To pick up the latest pin, run
\`npx svelte-vitals@latest ci upgrade\`.

Options:
  --force       Overwrite an existing workflow file (install only)
  --dry-run     Print the plan and exit without writing
  -h, --help    Show this help",
  "out": "",
  "wrote": false,
}
`;

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > install --dry-run 1`] = `
{
  "code": 0,
  "err": "",
  "out": "Plan:
  .github/workflows/svelte-vitals.yml  [created]
Dry run — no files written.",
  "wrote": false,
}
`;

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > install --help 1`] = `
{
  "code": 0,
  "err": "",
  "out": "svelte-vitals ci — scaffold CI integration

Usage:
  svelte-vitals ci install [options]
  svelte-vitals ci upgrade [--dry-run]

Adds a GitHub Actions workflow (.github/workflows/svelte-vitals.yml) that calls the \`@svelte-vitals/action\`
GitHub Action on pull requests: inline annotations, a job summary, and a sticky PR
comment with the findings.

\`ci upgrade\` rewrites only the pinned \`@svelte-vitals/action\` reference in an existing
workflow to the pin bundled with this CLI, leaving the rest of the file (and any other
pins, like actions/checkout) untouched. To pick up the latest pin, run
\`npx svelte-vitals@latest ci upgrade\`.

OPTIONS:
  -h, --help             Show this help
  --force                Overwrite an existing workflow file (install only)
  --dry-run              Print the plan and exit without writing",
  "wrote": false,
}
`;

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > install 1`] = `
{
  "code": 0,
  "err": "",
  "out": "Plan:
  .github/workflows/svelte-vitals.yml  [created]
✓ created .github/workflows/svelte-vitals.yml
Done. Commit the workflow file and open a PR to see it in action.",
  "wrote": true,
}
`;

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > isntall (typo of install, close enough for a did-you-mean hint) 1`] = `
{
  "code": 2,
  "err": "svelte-vitals: did you mean \`svelte-vitals ci install\`?
svelte-vitals ci — scaffold CI integration

Usage:
  svelte-vitals ci install [options]
  svelte-vitals ci upgrade [--dry-run]

Adds a GitHub Actions workflow (.github/workflows/svelte-vitals.yml) that calls the \`@svelte-vitals/action\`
GitHub Action on pull requests: inline annotations, a job summary, and a sticky PR
comment with the findings.

\`ci upgrade\` rewrites only the pinned \`@svelte-vitals/action\` reference in an existing
workflow to the pin bundled with this CLI, leaving the rest of the file (and any other
pins, like actions/checkout) untouched. To pick up the latest pin, run
\`npx svelte-vitals@latest ci upgrade\`.

Options:
  --force       Overwrite an existing workflow file (install only)
  --dry-run     Print the plan and exit without writing
  -h, --help    Show this help",
  "out": "",
  "wrote": false,
}
`;

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > no sub (bare ci) 1`] = `
{
  "code": 2,
  "err": "svelte-vitals ci — scaffold CI integration

Usage:
  svelte-vitals ci install [options]
  svelte-vitals ci upgrade [--dry-run]

Adds a GitHub Actions workflow (.github/workflows/svelte-vitals.yml) that calls the \`@svelte-vitals/action\`
GitHub Action on pull requests: inline annotations, a job summary, and a sticky PR
comment with the findings.

\`ci upgrade\` rewrites only the pinned \`@svelte-vitals/action\` reference in an existing
workflow to the pin bundled with this CLI, leaving the rest of the file (and any other
pins, like actions/checkout) untouched. To pick up the latest pin, run
\`npx svelte-vitals@latest ci upgrade\`.

Options:
  --force       Overwrite an existing workflow file (install only)
  --dry-run     Print the plan and exit without writing
  -h, --help    Show this help",
  "out": "",
  "wrote": false,
}
`;

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > upgrade (no workflow file) 1`] = `
{
  "code": 2,
  "err": "svelte-vitals: no .github/workflows/svelte-vitals.yml found — run \`svelte-vitals ci install\` first.",
  "out": "",
  "wrote": false,
}
`;

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > upgrade --dry-run (no workflow file) 1`] = `
{
  "code": 2,
  "err": "svelte-vitals: no .github/workflows/svelte-vitals.yml found — run \`svelte-vitals ci install\` first.",
  "out": "",
  "wrote": false,
}
`;

exports[`gunshi/bone ci — pinned behavior across the argv-shape matrix > upgrade --help 1`] = `
{
  "code": 0,
  "err": "",
  "out": "svelte-vitals ci — scaffold CI integration

Usage:
  svelte-vitals ci install [options]
  svelte-vitals ci upgrade [--dry-run]

Adds a GitHub Actions workflow (.github/workflows/svelte-vitals.yml) that calls the \`@svelte-vitals/action\`
GitHub Action on pull requests: inline annotations, a job summary, and a sticky PR
comment with the findings.

\`ci upgrade\` rewrites only the pinned \`@svelte-vitals/action\` reference in an existing
workflow to the pin bundled with this CLI, leaving the rest of the file (and any other
pins, like actions/checkout) untouched. To pick up the latest pin, run
\`npx svelte-vitals@latest ci upgrade\`.

OPTIONS:
  -h, --help             Show this help
  --force                Overwrite an existing workflow file (install only)
  --dry-run              Print the plan and exit without writing",
  "wrote": false,
}
`;
